# ChainWallet

./: .gitignore  README.md  build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
core/authority-ckeck/: CMakeLists.txt  build.gradle.kts
core/authority-ckeck/src/androidTest/java/com/smallraw/authority/: ExampleInstrumentedTest.kt
core/authority-ckeck/src/main/cpp/: authority-lib.c  keys.c
core/authority-ckeck/src/main/java/com/smallraw/authority/: AuthorityKey.kt
core/authority-ckeck/src/test/java/com/smallraw/authority/: ExampleUnitTest.kt
crypto/aes/: CMakeLists.txt  build.gradle.kts
crypto/aes/src/androidTest/java/com/smallraw/crypto/: ExampleInstrumentedTest.kt
crypto/aes/src/main/cpp/: aes-wrapper.c
crypto/aes/src/main/java/com/smallraw/crypto/: Aes.kt
crypto/aes/src/main/java/com/smallraw/crypto/paddings/: ISO7816d4Padding.kt  NoPadding.kt  X923Padding.kt
crypto/aes/src/test/java/com/smallraw/crypto/: AesUnitTest.kt
lib-authority-ckeck/: CMakeLists.txt  build.gradle
lib-authority-ckeck/src/androidTest/java/com/smallraw/authority/: ExampleInstrumentedTest.kt
lib-authority-ckeck/src/main/: AndroidManifest.xml
lib-authority-ckeck/src/main/cpp/: authority-lib.c  valid.c  valid.h
lib-authority-ckeck/src/main/java/com/smallraw/authority/: AuthorityKey.kt
lib-chain-core/: CMakeLists.txt  build.gradle
lib-chain-core/libs/: crypto-wrapper.c  crypto-wrapper.cpp
lib-chain-core/libs/crypto/: CMakeLists.txt  base58.c  base58.h  compiler.h  config.h  endian.h  hexstring.c  hmac_sha2.c  hmac_sha2.h  keccak.c  ripemd160.c  ripemd160.h  sha2.c
lib-chain-core/libs/crypto/include/: der.h  hexstring.h  sha2.h
lib-chain-core/libs/crypto/src/: base58.c  der.c  hexstring.c  hmac.c  hmac_sha2.c  ripemd160.c  sha2.c
lib-chain-core/libs/temp/: ripemd160.cpp  sha2.cpp
lib-chain-core/src/androidTest/java/com/smallraw/chain/lib/: CryptoUnitTest.kt  DEREncodeUnitTest.kt
lib-chain-core/src/androidTest/java/com/smallraw/chain/lib/core/: CryptoUnitTest.kt  DEREncodeUnitTest.kt
lib-chain-core/src/main/: AndroidManifest.xml
lib-chain-core/src/main/java/com/smallraw/chain/lib/: Address.kt  BaseKeyPair.kt  ChainAccount.kt  PublicGenerator.kt  Signature.kt  Signer.kt
lib-chain-core/src/main/java/com/smallraw/chain/lib/core/: Address.kt  BaseKeyPair.kt  PublicGenerator.kt  Signature.kt  Signer.kt
lib-chain-core/src/main/java/com/smallraw/chain/lib/crypto/: Base58.kt  DEREncode.kt  HmacSha2.kt  Keccak.kt  Ripemd160.kt  Sha256.kt  Sha3.kt  Signature.kt  Signer.kt
lib-chain-core/src/main/java/com/smallraw/chain/lib/execptions/: JNICallException.kt  PrivateKeyException.kt  PublicKeyException.kt
lib-chain-core/src/main/java/com/smallraw/chain/lib/extensions/: Byte.kt  ByteArray.kt  Int.kt  String.kt
lib-chain-core/src/main/java/com/smallraw/chain/lib/jni/: CryptoJNI.kt
lib-chain-core/src/main/java/com/smallraw/chain/lib/random/: RandomGenerator.kt
lib-chain-core/src/main/java/com/smallraw/chain/lib/util/: Base58Util.java  HexUtils.kt  SHA256.java  TimeDiffUtil.kt
lib-chain-crypto-secp256k1/: CMakeLists.txt  build.gradle
lib-chain-crypto-secp256k1/libs/: secp256k1-wrapper.c  secp256k1-wrapper.cpp
lib-chain-crypto-secp256k1/libs/libsecp256k1/: CMakeLists.txt
lib-chain-crypto-secp256k1/libs/libsecp256k1/src/: ecdsa.c  ecdsa.h  libsecp256k1-config.h  memzero.h  options.h  rand.h  rfc6979.h  secp256k1.c
lib-chain-crypto-secp256k1/libs/secp256k1-cxx/: CMakeLists.txt  secp256k1-cxx.cpp  secp256k1-cxx.hpp  temp.cpp  temp.txt
lib-chain-crypto-secp256k1/libs/secp256k1-cxx/crypto/: CMakeLists.txt  base58.cpp  base58.h  hasher.cpp  hasher.h  hmac.cpp  hmac.h  memzero.cpp  memzero.h  options.h  sha2.hpp
lib-chain-crypto-secp256k1/src/androidTest/java/com/smallraw/chain/lib/: ExampleInstrumentedTest.kt  Secp256k1Test.kt
lib-chain-crypto-secp256k1/src/main/java/com/smallraw/chain/lib/: Secp256k1KeyPair.kt  Secp256k1PrivateKey.kt  Secp256k1PublicKey.kt
lib-chain-crypto-secp256k1/src/main/java/com/smallraw/chain/lib/crypto/: Secp256K1.kt  Secp256k1Signer.kt
lib-chain-crypto-secp256k1/src/main/java/com/smallraw/chain/lib/jni/: Secp256k1JNI.kt
lib-chain-crypto-secp256k1/src/test/java/com/smallraw/chain/lib/: ExampleUnitTest.kt
lib-crypto-aes/: CMakeLists.txt  build.gradle
lib-crypto-aes/src/androidTest/java/com/smallraw/crypto/: ExampleInstrumentedTest.kt
lib-crypto-aes/src/main/: AndroidManifest.xml
lib-crypto-aes/src/main/cpp/: aes-wrapper.c
lib-crypto-aes/src/main/java/com/smallraw/crypto/: Aes.kt
lib-crypto-aes/src/main/java/com/smallraw/crypto/paddings/: BlockCipherPadding.kt  ISO10126d2Padding.kt  PKCS7Padding.kt  TBCPadding.kt  ZeroBytePadding.kt
lib-crypto-aes/src/test/java/com/smallraw/crypto/: ExampleUnitTest.kt
native-crypto/: .gitignore  CMakeLists.txt  CMakeLists1.txt  README.md  base32.c  base58.c  bignum.c  blake256.c  blake2b.c  blake2s.c  curves.c  ecdsa.c  groestl.c  hasher.c  hexstring.c  hmac_drbg.c  jni_method.c  nist256p1.c  nist256p1.table  pbkdf2.c  rand.c  rfc6979.c  secp256k1.c  sha2.c  sha3.c
native-crypto/aes/: aes.h  aestst.c
native-crypto/chacha20poly1305/: ecrypt-sync.h
native-crypto/ed25519-donna/: ed25519-donna-impl-base.c  ed25519-hash-custom-keccak.h  ed25519-hash-custom-sha3.h  ed25519-hash-custom.h  ed25519.c
native-crypto/include/: base32.h  base58.h  bignum.h  byte_order.h  curve.h  curves.h  ecdsa.h  hexstring.h  jni_method.h  nist256p1.h  pbkdf2.h  rfc6979.h  secp256k1.h  sha2.h  sha3.h
native-crypto/native-crypto.xcodeproj/: project.pbxproj
native-crypto/native-crypto.xcodeproj/project.xcworkspace/xcuserdata/quincysx.xcuserdatad/: UserInterfaceState.xcuserstate
native-crypto/native-crypto.xcodeproj/xcuserdata/quincysx.xcuserdatad/xcschemes/: xcschememanagement.plist
standard/mnemonic/: CMakeLists.txt  build.gradle.kts
standard/mnemonic/src/androidTest/java/com/smallraw/wallet/mnemonic/: MnemonicModelUnitTest.kt  MnemonicUnitTest.kt
standard/mnemonic/src/main/assets/: english.txt
standard/mnemonic/src/main/java/com/smallraw/wallet/mnemonic/: MnemonicBuild.kt  (+7 more)
(+699 files in other folders)
